# AI-Brand-OS

./: .gitignore  .tmp-bun  CLAUDE.md  README.md  docker-compose.yml  opencode.json  package-lock.json  package.json  skills-lock.json
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_style_schema.py  003_trend_schema.py
backend/api/: deps.py
backend/api/v1/: auth.py  content.py  knowledge.py  profile.py  router.py  style.py  trends.py
backend/apidocs/: readme.md
backend/app/: main.py  worker.py
backend/core/: chroma.py  config.py  embedding.py  llm.py  logging.py  middleware.py  security.py
backend/database/: __init__.py  db.py
backend/models/: __init__.py  base.py  content.py  knowledge.py  profile.py  style.py  trend.py  user.py
backend/prompts/: analytics_agent.md  context_aggregator.md  daily_brief.md  draft_composer.md  fingerprint_extraction.md  hook_generator.md  idea_generator.md  knowledge_agent.md  memory_agent.md  quality_gate.md  research_agent.md  review_agent.md  signal_classification.md  strategy_agent.md  style_agent.md  style_refiner.md  summary_generator.md  tag_generator.md  topic_selector.md  trend_agent.md  weekly_summary.md  writing_agent.md
backend/repositories/: content.py  knowledge.py  style.py  trend.py
backend/schemas/: __init__.py  auth.py  content.py  knowledge.py  profile.py  style.py  trend.py
backend/services/: __init__.py  evaluation.py  history.py  ingestion.py  knowledge.py  profile.py  research.py
backend/tests/: conftest.py  test_auth.py  test_chroma.py  test_config.py  test_content_api.py  test_content_engine.py  test_content_engine_stages.py  test_database.py  test_evaluation.py  test_graph.py  test_health.py  test_history.py  test_ingestion.py  test_knowledge.py  test_llm.py  test_logging.py  test_middleware.py  test_profile.py  test_prompt.py  test_repositories_content.py  test_repositories_knowledge.py  test_repositories_style.py  test_repositories_trend.py  test_research.py  test_security.py  test_style.py  test_trend.py
docs/: 01_PRD.md  (+22 more)
(+198 files in other folders)
