[project]
name = "brandos-backend"
version = "0.1.0"
description = "BrandOS - AI-powered Personal Brand Operating System"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "loguru>=0.7.3",
    "google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "llama-index>=0.12.0",
    "llama-index-embeddings-huggingface>=0.4.0",
    "sentence-transformers>=3.3.0",
    "chromadb>=0.5.20",
    "orjson>=3.10.0",
    "slowapi>=0.1.9",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "coverage>=7.6.0",
    "faker>=33.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "DTZ", "EM", "G", "LOG", "PIE", "Q", "RET", "RUF", "SIM", "SLF", "T20", "TRY", "YTT"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["ANN", "S101"]
"*/router.py" = ["ANN"]
"core/*.py" = ["LOG"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
exclude = ["tests/", "alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: marks tests as integration tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["api", "application", "agents", "services", "repositories", "database", "models", "schemas", "core"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy._WheelMetadataBackend"
